# Stencil-AI

./: .gitignore  README.md  Stencil.py  requirements.txt
.github/workflows/: deploy-to-hf-space.yml
Diagrams/: Creating a new artwork.txt  Editing an artwork object.txt
StencilAI/: .gitignore  APPROACH.md  DEPLOYMENT.md  STENCILCV_GUIDE.md  Stencil.py  StencilCV.py  app.py  pyproject.toml  requirements.txt  test_StencilCV.py  upload_models_to_hf.py
StencilAI/Fine-tuning/: AI_Stencil_FineTuning.py  FINE_TUNING.md  runjob.sh
StencilAI/Fine-tuning/Models/: training_config.json
StencilAI/PromptNLP/: PromptNLP.py  README.md
StencilAI/Source Image Sample/: testRawConversion.py
backend/: .gitignore  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts  server.types.ts
backend/src/artwork/: artwork.controller.ts  artwork.module.ts  artwork.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/database/: database.service.ts  database.types.ts
backend/src/middleware/: cookieFlags.middleware.ts
backend/src/oeno/: oeno.controller.ts  oeno.module.ts  oeno.service.ts  oeno.txt  oeno.types.ts
backend/src/volume/: volume.controller.ts  volume.module.ts  volume.service.ts
backend/types/: express.d.ts
frontend/: flutter_frontend.code-workspace  hive_models.txt  pubspec.yaml
frontend/flutter_frontend/: pubspec.yaml
frontend/flutter_frontend/lib/: main.dart
frontend/lib/: main.dart
frontend/lib/services/: dio_client.dart  logger.dart
frontend/lib/themes/: light_mode.dart
(+73 files in other folders)
