[project]
name = "stencilai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.20.0",
    "diffusers>=0.21.0",
    "en-core-web-sm",
    "gradio>=4.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=9.0.0",
    "safetensors>=0.3.0",
    "scikit-image>=0.20.0",
    "scipy>=1.10.0",
    "spacy[cuda11x]>=3.8.9",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
